--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
+    "serverless-http": "^3.2.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
