--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "node index.js"
   },
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
